# racoon

./: LICENSE  racoon_structure.drawio  tree_vs_grid.drawio
dropbox/: Journal_Racoon.md  Structure_Racoon.md
simulations/racoon_weight/: Cargo.toml  takeover1.ods
simulations/racoon_weight/src/: lib.rs
simulations/racoon_weight2/: Cargo.toml  config.ron
simulations/racoon_weight2/src/: main.rs
simulations/racoon_weight3/: Cargo.toml  config.ron
simulations/racoon_weight3/src/: main.rs
