[package]
name = "racoon_weight2"
version = "0.1.0"
authors = ["Jérémy PICOT <jeremy.p@auctionity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.12.0"
rayon = "1.2.0"
ron = "0.5.1"
rug = "1.6.0"
serde = { version = "1.0.104", features = ["derive"] }
sha3 = "0.8.2"
log = "0.4.8"
simple_logger = "1.6.0"